--- a/Recommended.html
+++ b/Recommended.html
@@ -94,6 +94,11 @@ var url = "http://svcs.ebay.com/services/search/FindingService/v1";
 var s = document.createElement("script"); // create script element
 s.src = url;
 
+var a = document.createElement("script");
+console.log("test1");
+document.body.appendChild(a);
+
+console.log("test2");
 document.body.appendChild(s);
 
 
